src/test/ui/const-generics/issues/issue-71382.full.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71382.rs:17:23
   |
LL |     fn test<const FN: fn()>(&self) {
   |                       ^^^^

error: aborting due to previous error

